# ipl-agent

./: .env.example  .gitignore  langgraph.json  pyproject.toml
ipl_agent/: settings.py  utils.py
ipl_agent/core/: df.py  prompts.py
ipl_agent/graph/: edges.py  graph.py  nodes.py  state.py
