[project]
name = "ipl-agent"
version = "0"
description = "An IPL agent to inquire about IPL matches."
requires-python = "==3.11.*"
dependencies = [
    "bs4>=0.0.2",
    "duckdb>=1.2.1",
    "duckduckgo-search>=7.5.1",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.43",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.3.5",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "polars[pyarrow]>=1.24.0",
]

[dependency-groups]
dev = ["langgraph-cli[inmem]>=0.1.75"]
